# ai-blog-generator

./: .env.example  .gitignore  .replit  AI_BLOG_IMPROVEMENT_PLAN.md  CLAUDE.md  ai-daily-brief-complete.jsx  main.py  pyproject.toml  replit.nix  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: activity_logs.py  admin.py  articles.py  generate.py  scheduler.py  sources.py
backend/app/db/: database.py
backend/app/db/repositories/: activity_log_repo.py  article_repo.py  base.py  pipeline_state_repo.py  source_repo.py
backend/app/models/: activity_log.py  article.py  source.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: article.py  source.py
backend/app/scripts/: fix_articles.py
backend/app/services/generators/: __init__.py  blog_writer.py  image_generator.py  prompts.py  reference_validator.py  source_evaluator.py
backend/app/services/llm/: __init__.py  base.py  gemini.py  (+1 more)
database/: schema.sql
database/migrations/: 001_add_source_selection.sql
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: AIInsightBox.tsx  ArticleCard.tsx  DateNavigation.tsx  EditionSection.tsx  ErrorBoundary.tsx  FilterBar.tsx  Footer.tsx  Header.tsx  HomeContent.tsx  NewsletterCTA.tsx  ReadingProgress.tsx  ShareButtons.tsx  Skeleton.tsx  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/lib/: admin-api.ts  api-proxy.ts  api.ts
(+32 files in other folders)
